--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,7 @@
   --bs-white: #fff;
   --bs-gray: #6c757d;
   --bs-gray-dark: #343a40;
-  --bs-primary: #1100ff;
+  --bs-primary: #2196f3d6;
   --bs-secondary: #6c757d;
   --bs-success: #198754;
   --bs-info: #0dcaf0;
@@ -208,11 +208,11 @@ sup {
 }
 
 a {
-  color: #ffc800;
+  color: #03a9f4;;
   text-decoration: underline;
 }
 a:hover {
-  color: #cca000;
+  color: #000000;
 }
 
 a:not([href]):not([class]), a:not([href]):not([class]):hover {
@@ -2949,13 +2949,13 @@ textarea.form-control-lg {
 
 .btn-primary {
   color: #fff;
-  background-color: #ffc800;
-  border-color: #ffc800;
+  background-color: #03a9f4;
+  border-color: #fff;
 }
 .btn-primary:hover {
-  color: #fff;
-  background-color: #d9aa00;
-  border-color: #cca000;
+  color: #03a9f4;
+  background-color: #ffffff;
+  border-color: #000000;
 }
 .btn-check:focus + .btn-primary, .btn-primary:focus {
   color: #fff;
@@ -2973,8 +2973,8 @@ textarea.form-control-lg {
 }
 .btn-primary:disabled, .btn-primary.disabled {
   color: #fff;
-  background-color: #ffc800;
-  border-color: #ffc800;
+  background-color: #03a9f4;
+  border-color: #ffffff;
 }
 
 .btn-secondary {
@@ -7334,7 +7334,7 @@ textarea.form-control-lg {
 
 /* rtl:end:remove */
 .text-primary {
-  color: #1100ff !important;
+  color: #03a9f4 !important;
 }
 
 .text-secondary {
@@ -10914,7 +10914,7 @@ p {
   letter-spacing: 0.0625em;
 }
 #mainNav .navbar-nav .nav-item .nav-link.active, #mainNav .navbar-nav .nav-item .nav-link:hover {
-  color: #ffc800;
+  color: #03a9f4;
 }
 
 @media (min-width: 992px) {
@@ -11011,7 +11011,7 @@ header.masthead .masthead-heading {
   position: absolute;
   width: 100%;
   height: 100%;
-  background: rgba(255, 200, 0, 0.9);
+  background: #2196f3d6;
   align-items: center;
   justify-content: center;
   opacity: 0;
